# CPSC312-assignment3

./: .gitignore  CPSC312-assignment3.cabal  README.md
src/: PQ.hs  TwentyQs.hs
