name:                CPSC312-assignment3
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/CPSC312-assignment3#readme
license:             GPLv3
license-file:        LICENSE
author:              Al Smith
maintainer:          alexgwsmith@gmail.com
copyright:           2018 Al Smith
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable CPSC312-assignment3
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
